Fix to issue #29807, issue quick search filter selects too wide.  Applied css widths in project.css.  Also fixed (1) issue with inline display of search filter items and (2) form wasn't submitting.

--- a/project.css
+++ b/project.css
@@ -104,6 +104,10 @@
   vertical-align: bottom;
 }
 
+.project .quick-search #edit-projects, #edit-states {
+  width: 150px;
+}
+
 .node-form .project fieldset {
   display: block;
 }
